EXTRA_DIST = xrdpapi.h

EXTRA_DEFINES =
EXTRA_INCLUDES =
EXTRA_LIBS =
EXTRA_FLAGS =

AM_CFLAGS = \
  $(EXTRA_DEFINES)

INCLUDES = \
  $(EXTRA_INCLUDES)

lib_LTLIBRARIES = \
  libxrdpapi.la

libxrdpapi_la_SOURCES = \
  xrdpapi.c

libxrdpapi_la_LDFLAGS = \
  $(EXTRA_FLAGS)

libxrdpapi_la_LIBADD = \
  $(EXTRA_LIBS)
