EXTRA_DIST = xrdpvr.h

EXTRA_DEFINES =
EXTRA_INCLUDES =
EXTRA_LIBS =
EXTRA_FLAGS =

AM_CFLAGS = \
  $(EXTRA_DEFINES)

INCLUDES = \
  $(EXTRA_INCLUDES)

lib_LTLIBRARIES = \
  libxrdpvr.la

libxrdpvr_la_SOURCES = \
  xrdpvr.c

libxrdpvr_la_LDFLAGS = \
  $(EXTRA_FLAGS)

libxrdpvr_la_LIBADD = \
  $(EXTRA_LIBS)
