EXTRA_DIST =

EXTRA_PAINTER_DEFINES =
EXTRA_PAINTER_INCLUDES =
EXTRA_PAINTER_LIBS =
EXTRA_PAINTER_FLAGS =

AM_CFLAGS = \
  -I$(top_srcdir)/include \
  $(EXTRA_PAINTER_FLAGS)

lib_LTLIBRARIES = libpainter.la

libpainter_la_LDFLAGS =

libpainter_ladir = $(moduledir)

libpainter_la_SOURCES = painter.c painter_utils.c painter_utils.h

libpainter_la_LIBADD =

